# SimpleSteelCal-public

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README_Linux.md  README_Windows.md  README_macOS.md  build_and_test.ps1  build_linux.sh  build_macos.sh  build_windows.ps1  clippy.toml  install_linux.sh  lbs_ft_table.xlsx  package_installer_windows.ps1  package_unix_release.sh  steel_calc_config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-windows.yml  release.yml
assets/: gauge_tables.override.json
compile/: SimpleSteelCalculator.iss
crates/steelcal-cli/: Cargo.toml
crates/steelcal-cli/src/: batch.rs  main.rs
crates/steelcal-cli/tests/: integration.rs
crates/steelcal-core/: Cargo.toml
crates/steelcal-core/src/: config.rs  errors.rs  gauges.rs  history.rs  lib.rs
crates/steelcal-core/tests/: calculation_edges.rs  config_migration.rs
crates/steelcal-desktop/: Cargo.toml  build.rs
crates/steelcal-desktop/src/: handlers.rs  init.rs  main.rs  startup.rs  ui_helpers.rs  wiring.rs
crates/steelcal-desktop/ui/: app.slint  coil-panel.slint  scrap-panel.slint  sheet-panel.slint  theme.slint  tooltip.slint
docs/: release-process.md
fixtures/: validation-history-ux.md
fixtures/batch/: coil-batch-happy-path.json  coil-batch-invalid-row.json  scrap-batch-happy-path.json  scrap-batch-invalid-row.json  sheet-batch-conflicting-modes.json  sheet-batch-happy-path.csv  sheet-batch-happy-path.json  sheet-batch-invalid-row.csv  sheet-batch-invalid-row.json  sheet-batch-missing-width-header.csv
fixtures/parity/: cli-baseline.json
fixtures/validation/: packaging_assertions.md
tools/data-import/: convert_xlsx_to_tables.py
(+1 files in other folders)
