[package]
name = "steelcal-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
selftest = ["steelcal-core/selftest"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv = "1.3"
serde.workspace = true
serde_json.workspace = true
steelcal-core = { path = "../steelcal-core" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
