[package]
name = "steelcal-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
selftest = []

[dependencies]
clap.workspace = true
directories.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
