[package]
name = "steelcal-desktop"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
log.workspace = true
serde_json.workspace = true
slint.workspace = true
steelcal-core = { path = "../steelcal-core" }

[[bin]]
name = "SimpleSteelCalculator"
path = "src/main.rs"

[build-dependencies]
slint-build.workspace = true
winresource = "0.1"
